--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-js-hw-10</title>
-    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>      
-    <script type="module" src="./js/1-timer.js"></script>
-    <script type="module" src="./js/2-snackbar.js"></script>
-  </body>
+  <body>
+    <li><a href="./1-timer.html">Timer</a></li>
+    <li><a href="./2-snackbar.html">Snackbar</a></li>
+    
 </html>
