--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap"
     />
-    <link rel="stylesheet" href="iziToast.min.css" />
+    <!-- <link rel="stylesheet" href="iziToast.min.css" /> -->
     <link rel="stylesheet" href="./css/styles.css" />
     <title>1-timer</title>
   </head>
@@ -37,7 +37,7 @@
       </div>
     </div>
 
-    <script src="iziToast.min.js" type="text/javascript"></script>
+    <!-- <script src="iziToast.min.js" type="text/javascript"></script> -->
     <script type="module" src="./js/1-timer.js"></script>
   </body>
 </html>
