--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/1-timer.css" />
     <title>1-timer</title>
   </head>
   <body>
